--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Hapi.js Project",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "istanbul cover _mocha test/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,16 @@
   "author": "Mohamed Fariz <faariz@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "hapi": "^13.3.0"
+    "dotenv": "^2.0.0",
+    "hapi": "^13.3.0",
+    "pg": "^4.5.5",
+    "q": "~1.0.1",
+    "underscore": "~1.6.0"
+  },
+  "devDependencies": {
+    "mocha": "^1.17.1",
+    "should": "^3.1.3",
+    "supertest": "^0.9.0",
+    "travis-cov": "^0.2.5"
   }
 }
